[tool.poetry]
name = "bs_map"
version = "0.1.0"
description = "map generator for beat saber"
authors = ["Ruoqi Huang <huangruoqi374@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
pydub = "^0.25.1"
scipy = "^1.9.1"
matplotlib = "^3.5.3"
pytest = "^7.1.3"
black = "^22.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
